# check-commit

./: .dod.yml  BACKGROUND.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  git.rs  main.rs
tests/: cli.rs
