[package]
name = "check-commit"
version = "1.0.0"
authors = ["Claes Adamsson <claes.adamsson@gmail.com>"]
repository = "https://github.com/cladam/check-commit"
readme="README.md"
license = "MIT"
description = "A TBD-friendly pre-commit tool that enforces your team's Definition of Done using an interactive checklist."
keywords = ["git", "cli", "dod", "tbd"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
colored = "3.0.0"
serde_yaml = "0.9.33"
serde = { version = "1.0.219", features = ["derive"] }
dialoguer = "0.11.0"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.20.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"